--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./assets/ARTE 1.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./animation.css">
 
 </head>
 
@@ -47,6 +48,13 @@
         <footer>
             Feito com ♥ pela <a href="https://rocketseat.com.br">Rocketseat</a>
         </footer>
+    </div>
+    <div id="animation">
+        <div class="triangle"></div>
+        <div class="triangle"></div>
+        <div class="triangle"></div>
+        <div class="triangle"></div>
+        <div class="triangle"></div>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
