--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
             <span></span>
         </div>
         <ul>
-            <li><a href="https://leocodelab.com" target="_blank">Site oficial</a></li>
-            <li><a href="https://www.instagram.com/leocodelab/" target="_blank">Conheça o instagram</a></li>
-            <li><a href="https://www.tiktok.com/@leocodelab" target="_blank">Visitar o TikTok</a></li>
-            <li><a href="https://github.com/SchunckLeonardo" target="_blank">Ver o GitHub</a></li>
+            <li><a href="https://leocodelab.com" target="_blank">Site Leocodelab</a></li>
+            <li><a href="https://www.udemy.com/course/programacao-em-c-essencial/?couponCode=LEOCODELAB-GU-C" target="_blank">Curso de C com cupom aplicado</a></li>
             <li><a href="https://www.youtube.com/channel/UCCpvaayjqOTSgN6dWnGEZbw" target="_blank">Canal do Youtube</a></li>
-            <li><a href="https://www.linkedin.com/in/leonardo-schunck-rainha-a08468202/" target="_blank">Olhar o
-                    LinkedIn</a></li>
         </ul>
         <div id="social-links">
             <a href="https://github.com/SchunckLeonardo" target="_blank">
