--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <ul>
             <li><a href="https://leocodelab.com" target="_blank">Site Leocodelab</a></li>
             <li><a href="https://open.spotify.com/episode/1INomeIknMMNttXKT8ck3L" target="_blank">Language Week: Começe pelo C </a></li>
-            <li><a href="https://www.udemy.com/course/programacao-em-c-essencial/?couponCode=LEOCODELAB-GU-C" target="_blank">Curso de C com cupom aplicado</a></li>
             <li><a href="https://www.youtube.com/channel/UCCpvaayjqOTSgN6dWnGEZbw" target="_blank">Canal do Youtube</a></li>
+            <li><a href="https://github.com/SchunckLeonardo/sistema-bancario-leocodelab" target="_blank">Desafio: Sistema Bancário</a></li>
         </ul>
         <div id="social-links">
             <a href="https://github.com/SchunckLeonardo" target="_blank">
