--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="https://leocodelab.com" target="_blank">Site Leocodelab</a></li>
             <li><a href="https://open.spotify.com/episode/1INomeIknMMNttXKT8ck3L" target="_blank">Language Week: Começe pelo C </a></li>
             <li><a href="https://www.youtube.com/channel/UCCpvaayjqOTSgN6dWnGEZbw" target="_blank">Canal do Youtube</a></li>
-            <li><a href="https://github.com/SchunckLeonardo/sistema-bancario-leocodelab" target="_blank">Desafio: Sistema Bancário</a></li>
+            <li><a href="https://github.com/SchunckLeonardo/desafio-mercado-virtual" target="_blank">Desafio: Sistema de Mercado Virtual</a></li>
         </ul>
         <div id="social-links">
             <a href="https://github.com/SchunckLeonardo" target="_blank">
